Fixing overflow style

--- a/traffic_stops/static/less/index.less
+++ b/traffic_stops/static/less/index.less
@@ -471,9 +471,9 @@ h2.officer {
 /***
  * To accommodate the extra padding added to anchor elements without breaking
  * the accessibility of controls (see `fixAnchorElements in base
- * agency_detail.html), we hide overflow in rows.
+ * agency_detail.html), we hide overflow in containers.
  */
-.row {
+.container {
   overflow: hidden;
 }
 
